--- a/index7.html
+++ b/index7.html
@@ -3,13 +3,13 @@
 <head>
 
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S8PKTQJYBD"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WQZC3RP9RC"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S8PKTQJYBD');
+  gtag('config', 'G-WQZC3RP9RC');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
